<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/addtask"
        app:titleTextColor="@android:color/white">

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:background="@color/colorPrimary">

            <ImageButton
                android:id="@+id/submit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                android:scaleType="fitXY"
                android:src="@drawable/button" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/edittitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addtitle"
        android:textColor="@color/blue"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/add_toolbar"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/edittitle"
        app:layout_constraintLeft_toLeftOf="@id/guideline"/>
    <TextView
        android:id="@+id/datetitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duetitle"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/editText"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/editDate"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:textColor="@android:color/black"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded"
        app:layout_constraintTop_toBottomOf="@id/datetitle"
        app:layout_constraintLeft_toLeftOf="@id/guideline"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:srcCompat="@drawable/blue_calendar_icon"
        app:layout_constraintTop_toBottomOf="@id/datetitle"
        app:layout_constraintLeft_toLeftOf="@id/editDate"
        android:layout_marginTop="7dp"
        android:layout_marginStart="335dp"
        />
    <TextView
        android:id="@+id/detailstitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailtitle"
        android:textColor="@color/blue"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/editDate"
        app:layout_constraintLeft_toLeftOf="@id/guideline"/>

    <EditText
        android:id="@+id/multiline"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/detailstitle"
        app:layout_constraintLeft_toLeftOf="@id/guideline"/>

    <CheckBox
        android:id="@+id/important"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:text="@string/important"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/multiline"
        app:layout_constraintLeft_toLeftOf="@id/guideline"/>


</androidx.constraintlayout.widget.ConstraintLayout>